<resources>
    <string name="app_name">EWPMS</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC97gN88rfv9t8O7ucYPOdu5uPQFGXov14</string>
    <string name="please_check_with_the_internet_connection">Please check with the Internet connection!</string>
    <string name="response_failure_please_try_again">Response Failure. Please try again!</string>
    <string name="splash_content">Engineering Works and\nProjects Management System</string>
    <string name="get_started">Get Started</string>
    <string name="login_txt">Log In</string>
    <string name="user_name_txt">USERNAME</string>
    <string name="enter_user_name_txt">Enter Username</string>
    <string name="password_txt">PASSWORD</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_txt">Sign In</string>
    <string name="valid_password_error">Please enter valid Password!</string>
    <string name="user_details_not_found">User Details Not Found!</string>
    <string name="your_dashboard">Your Dashboard</string>
    <string name="reports_menu">Reports</string>
    <string name="dashboard_menu">Dashboard</string>
    <string name="my_works_menu">My Works</string>
    <string name="add_new_menu">Add New</string>
    <string name="chat_menu">Chats</string>
    <string name="work_report">Work Reports</string>
    <string name="my_works_list">My Works List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_by_name_txt">Search by project name</string>
    <string name="total_work">Total Works</string>
    <string name="ongoing_work">Ongoing Works</string>
    <string name="completed_works">Completed Works</string>
    <string name="upcoming_works">Upcoming Works</string>
    <string name="see_more_txt">SEE MORE</string>
    <string name="work_Status">Status of Works</string>
    <string name="ahead_of_schedule">AHEAD OF SCHEDULE</string>
    <string name="beyond_schedule">BEYOND SCHEDULE</string>
    <string name="asper_schedule">AS PER SCHEDULE</string>
    <string name="milestones">Milestones</string>
    <string name="completed_txt_caps">COMPLETED</string>
    <string name="ongoing_txt_caps">ONGOING</string>
    <string name="delay_txt">DELAY</string>
    <string name="finance_in_lakhs">Finance(In Lakhs)</string>
    <string name="amt_commited_txt">AMOUNTS COMMITTED</string>
    <string name="amt_released_txt">AMOUNTS RELEASED</string>
    <string name="amt_pending_txt">AMOUNT PENDING</string>
    <string name="ongoing_txt">Ongoing</string>
    <string name="pendidng_txt">Pending</string>
    <string name="completed_txt">Completed</string>
    <string name="valid_username_error">Please enter valid Username!</string>
    <string name="work_detail">Work Detail</string>
    <string name="present_photoes">Present Photos</string>
    <string name="work_description">Work Description</string>
    <string name="edit_work">Edit Work</string>
    <string name="name_of_the_project">NAME OF THE PROJECT</string>
    <string name="agreement_no">AGREEMENT NO</string>
    <string name="work_status_caps">WORK STATUS</string>
    <string name="opening_closing_date">OPENING - CLOSING DATES</string>
    <string name="administrative_sanction">ADMINISTRATIVE SANCTION:</string>
    <string name="administrative_sanction_amount">ADMINISTRATIVE SANCTION AMOUNT</string>
    <string name="technical_sanction">TECHNICAL SANCTION:</string>
    <string name="technical_sanction_amount">TECHNICAL SANCTION AMOUNT</string>
    <string name="time_period">TIME PERIOD</string>
    <string name="ecv">ECV</string>
    <string name="tcv">TCV</string>
    <string name="view_larger_map">View larger map</string>
    <string name="total_work_progress">Total Work Progress</string>
    <string name="upload_live_photo">+ Upload Live Photos</string>
    <string name="current_status_photos">Current Status Photos</string>
    <string name="create_new_work">Create New Work</string>
    <string name="basic_information">Basic Information</string>
    <string name="name_of_the_work">NAME OF THE WORK</string>
    <string name="wrong_password">InCorrect Password!</string>
    <string name="project_full_name">Project Full Name</string>
    <string name="category">CATEGORY</string>
    <string name="estimated_cost">ESTIMATED COST</string>
    <string name="agrement_info">Agreement Information</string>
    <string name="agreement_date">AGREEMENT DATE</string>
    <string name="tender_premium">TENDER PREMIUM</string>
    <string name="tender_contract_value">TENDER CONTRACT VALUE(TCV)</string>
    <string name="estimated_contract_value">ESTIMATED CONTRACT VALUE(ECV)</string>
    <string name="continue_text">Continue</string>
    <string name="administrative_sanction_small">Administrative Sanction</string>
    <string name="administrative_sanction_on">ADMINISTRATIVE\nSANCTION ON</string>
    <string name="sanction_by">SANCTION\nACCORDED BY</string>
    <string name="administrative_sanction_details">ADMINISTRATIVE SANCTION DETAILS</string>
    <string name="technical_sanction_small">Technical Sanction</string>
    <string name="technical_sanction_on">TECHNICAL\nSANCTION ON</string>
    <string name="technical_sanction_details">TECHNICAL SANCTION DETAILS</string>
    <string name="revised_info">Revised Information</string>
    <string name="revised_cost">REVISED COST</string>
    <string name="estimate_revised_cost">ESTIMATE/REVISED ESTIMATE COST</string>
    <string name="supplementary_info">Supplementary Information</string>
    <string name="supplementary_order_no">SUPPLEMENTARY ORDER NO</string>
    <string name="approval_date">APPROVAL DATE</string>
    <string name="granted_upto">GRANTED UPTO</string>
    <string name="geographocal_Details">Geographical Details</string>
    <string name="district_txt">DISTRICT</string>
    <string name="mandal_txt">MANDAL</string>
    <string name="villege_txt">VILLEGE</string>
    <string name="landmark_txt">LANDMARK/SY.NO</string>
    <string name="latitude_txt">LATITUDE</string>
    <string name="longitude_txt">LONGITUDE</string>
    <string name="site_area_txt">SITE AREA</string>
    <string name="staff_details">Staff Details</string>
    <string name="se_txt">SE</string>
    <string name="division_txt">DIVISION</string>
    <string name="ee_txt">EE</string>
    <string name="dee_txt">DEE</string>
    <string name="aee_txt">AEE</string>
    <string name="create_project">Create New Project</string>
    <string name="profile_txt">Profile</string>
    <string name="edit_txt">Edit</string>
    <string name="all_works_txt">All Works</string>
    <string name="no_data">No Data Available</string>
    <string name="comming_soon">Coming Soon!..</string>
    <string name="no_maps_app_found">No Maps app found</string>
    <string name="unable_to_fetch_location">Unable to fetch location</string>
    <string name="failed_to_fetch_location">Failed to fetch location: %1$s</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="upload_failed">Upload failed!</string>
    <string name="live_photo_uploaded_successfully">Live Photo uploaded successfully</string>
    <string name="current_working_projects">Current Working Projects</string>
    <string name="add_new_project">Add New Project</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notifications">Notification</string>
    <string name="language">Language</string>
    <string name="support">Support</string>
    <string name="sign_out">Sign Out</string>
    <string name="grant_permisison">Kindly grant the permission to access location!</string>
    <string name="division_txt_small">Division</string>
    <string name="update_progress">Update Progress</string>
    <string name="actual_amount_paid_for_project">Actual Amount Paid for Project</string>
    <string name="actual_work_done_against_milestone">Actual Work Done against Milestone</string>
    <string name="milestone_work_as_per_timeline">Milestone work as per Timeline</string>
    <string name="update_latest_progress_of_work">Update Latest Progress of work</string>
    <string name="start_date_nend_date">Start Date/\nEnd Date</string>
    <string name="amount_ncompleted">Amount/\nCompleted</string>
    <string name="remarks">Remarks</string>
    <string name="update">Update</string>
    <string name="project_progress_updated_successfully">Project progress Updated Successfully!.</string>
    <string name="enter_remarks">Enter Remarks!</string>
    <string name="updates_not_found">Updates Not Found!</string>
    <string name="finance_details">Finance Details</string>
    <string name="project_financial_details">Project Financial Details</string>
    <string name="bill_id">Bill ID</string>
    <string name="bill_no">Bill No</string>
    <string name="bill_amt">Bill Amount</string>
    <string name="paid_on">Paid On</string>
    <string name="status">Status</string>
    <string name="action">Action</string>
    <string name="add_or_update_project_financials">Add or Update Project Financials</string>
    <string name="mile_stone_name">Mile Stone Name *</string>
    <string name="financial_remarks">Financial Remarks</string>
    <string name="financial_remarks_imp">Financial Remarks *</string>
    <string name="bill_no_imp">Bill No *</string>
    <string name="bill_amt_imp">Bill Amount *</string>
    <string name="paid_on_imp">Paid On *</string>
    <string name="status_imp">Status *</string>
    <string name="save">Save</string>
    <string name="delete_txt">Delete</string>
    <string name="enter_bill_no">Enter Bill no!</string>
    <string name="enter_bill_amt">Enter Bill Amount!</string>
    <string name="select_paid_date">Select Paid Date!</string>
    <string name="enter_financial_remark">Enter Financial Remark!</string>
    <string name="select_status">Select Status!</string>
    <string name="finance_added_success">Financial details uploaded successfully..</string>
    <string name="please_enter_a_project_name">Please enter a Project Name!</string>
    <string name="please_select_a_categoty">Please Select a Category!</string>
    <string name="please_enter_estimated_cost">Please Enter Estimated Cost!</string>
    <string name="please_enter_agreement_no">Please enter a Agreement No!</string>
    <string name="please_select_agreement_date">Please select Agreement Date!</string>
    <string name="please_enter_ecv">Please enter Estimated Contract Value!</string>
    <string name="please_enter_time_period">Please Enter Time Period!</string>
    <string name="please_enter_tender_premium">Please enter Tender Premium!</string>
    <string name="please_enter_tender_ecv">Please enter Tender Contract Value!</string>
    <string name="please_administrative_sanction_amount">Please enter Administrative Sanction Amount!</string>
    <string name="please_select_admin_date">Please select Administrative Sanction date!</string>
    <string name="please_select_sanction">Please Select Sanction Accorded By!</string>
    <string name="please_enter_admin_details">Please Enter Administrative Sanction Details!</string>
    <string name="please_enter_tech_amt">Please Enter Technical Sanction Amount!</string>
    <string name="please_select_tech_sanction">Please Select Technical Sanction Date!</string>
    <string name="please_enter_tech_details">Please Enter Technical Sanction Details!</string>
    <string name="please_enter_revised_cost">Please Enter Revised Cost!</string>
    <string name="please_enter_estimate_revised">Please Enter Estimated Revised Cost!</string>
    <string name="please_enter_order_no">Please Enter Supplementary Order No!</string>
    <string name="please_select_approval">Please Select Approval Date!</string>
</resources>