<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:gravity="start">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="82dp"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:src="@drawable/logo_small"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:fontFamily="@font/libre_semi_bold"
            android:text="@string/splash_content"
            android:textColor="@color/white_text"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="35dp"
        android:background="@drawable/login_curve_shape">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:fontFamily="@font/libre_semi_bold"
            android:text="@string/login_txt"
            android:textColor="@color/button_text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:fontFamily="@font/libre_medium"
            android:text="@string/user_name_txt"
            android:textColor="@color/text_Color"
            android:textSize="12sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_name_et"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/enter_user_name_txt"
            android:inputType="textPersonName"
            android:background="@drawable/edt_bg"
            android:fontFamily="@font/libre_medium"
            android:paddingStart="10dp"
            android:textSize="12dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text_Color_light"
            android:textColorHint="@color/text_Color_light" />

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:fontFamily="@font/libre_medium"
            android:text="@string/password_txt"
            android:textColor="@color/text_Color"
            android:textSize="12sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_bg"
            android:weightSum="2">
        <EditText
            android:id="@+id/password_et"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="2"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:fontFamily="@font/libre_medium"
            android:paddingStart="10dp"
            android:textSize="12dp"
            android:textColor="@color/text_Color_light"
            android:textColorHint="@color/text_Color_light" />
            <ImageView
                android:id="@+id/eye_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="start|center"
                android:layout_marginRight="15dp"
                android:src="@drawable/close_eye"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:weightSum="2">
            <CheckBox
                android:id="@+id/remember_me_check_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/text_ColorDark"
                android:fontFamily="@font/libre_medium"
                android:textSize="12dp"
                android:buttonTint="@color/check_box_state"
                android:layout_weight="1"
                android:text="@string/remember_me" />
            <TextView
                android:id="@+id/forgot_password_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"
                android:gravity="end|center"
                android:fontFamily="@font/libre_medium"
                android:text="@string/forgot_password"
                android:textColor="@color/sky_blue_dark"
                android:textSize="12sp"
                 />
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/sky_blue_dark"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/libre_semi_bold"
            android:text="@string/sign_in_txt"
            android:textAllCaps="false"
            android:textColor="@color/white_text"
            android:textSize="14dp"
            />

    </LinearLayout>
    </LinearLayout>
</ScrollView>