<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addNewFinanceActivity">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:layout_margin="10dp">
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:layout_marginBottom="10dp">
           <RelativeLayout
               android:id="@+id/back_icon_layout"
               android:layout_width="40dp"
               android:layout_height="40dp">
               <de.hdodenhof.circleimageview.CircleImageView
                   android:src="@color/white_text"
                   android:layout_centerVertical="true"
                   android:layout_width="40dp"
                   android:layout_height="40dp"/>
               <ImageView
                   android:layout_width="24dp"
                   android:layout_height="24dp"
                   android:layout_centerInParent="true"
                   android:src="@drawable/baseline_arrow_back_24"
                   />
           </RelativeLayout>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/add_or_update_project_financials"
               android:fontFamily="@font/libre_semi_bold"
               android:textSize="20dp"
               android:singleLine="true"
               android:layout_centerVertical="true"
               android:layout_toRightOf="@+id/back_icon_layout"
               android:gravity="start|center"
               android:paddingHorizontal="16dp"
               android:textStyle="bold"
               android:textColor="@color/button_text"/>
       </RelativeLayout>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="start|center"
           android:layout_gravity="center"
           android:layout_marginLeft="5dp"
           android:layout_marginTop="10dp"
           android:fontFamily="@font/libre_medium"
           android:text="@string/mile_stone_name"
           android:textColor="@color/text_color_gray"
           android:textSize="16sp"
           />

       <TextView
           android:id="@+id/mile_stone_name_tv"
           android:layout_width="match_parent"
           android:layout_height="45dp"
           android:gravity="start|center"
           android:layout_gravity="center"
           android:layout_marginLeft="15dp"
           android:layout_marginRight="15dp"
           android:layout_marginTop="10dp"
           android:paddingStart="15dp"
           android:background="@drawable/edt_bg"
           android:fontFamily="@font/libre_medium"
           android:textColor="@color/black"
           android:textSize="14sp"
           />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="start|center"
           android:layout_gravity="center"
           android:layout_marginLeft="5dp"
           android:layout_marginTop="15dp"
           android:fontFamily="@font/libre_medium"
           android:text="@string/bill_no_imp"
           android:textColor="@color/text_color_gray"
           android:textSize="16sp"
           />

       <EditText
           android:id="@+id/bill_no_tv"
           android:layout_width="match_parent"
           android:layout_height="45dp"
           android:gravity="start|center"
           android:layout_gravity="center"
           android:layout_marginLeft="15dp"
           android:layout_marginRight="15dp"
           android:layout_marginTop="10dp"
           android:hint="@string/bill_no"
           android:paddingStart="10dp"
           android:inputType="number"
           android:digits="0123456789"
           android:textColorHint="@color/line_color"
           android:background="@drawable/edt_bg"
           android:fontFamily="@font/libre_medium"
           android:textColor="@color/black"
           android:textSize="14sp"
           />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="start|center"
           android:layout_gravity="center"
           android:layout_marginLeft="5dp"
           android:layout_marginTop="15dp"
           android:fontFamily="@font/libre_medium"
           android:text="@string/bill_amt_imp"
           android:textColor="@color/text_color_gray"
           android:textSize="16sp"
           />

       <EditText
           android:id="@+id/bill_amt_tv"
           android:layout_width="match_parent"
           android:layout_height="45dp"
           android:gravity="start|center"
           android:layout_gravity="center"
           android:layout_marginLeft="15dp"
           android:layout_marginRight="15dp"
           android:layout_marginTop="10dp"
           android:hint="@string/bill_amt"
           android:paddingStart="10dp"
           android:inputType="numberDecimal"
           android:textColorHint="@color/line_color"
           android:background="@drawable/edt_bg"
           android:fontFamily="@font/libre_medium"
           android:textColor="@color/black"
           android:textSize="14sp"
           />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="start|center"
           android:layout_gravity="center"
           android:layout_marginLeft="5dp"
           android:layout_marginTop="15dp"
           android:fontFamily="@font/libre_medium"
           android:text="@string/paid_on_imp"
           android:textColor="@color/text_color_gray"
           android:textSize="16sp"
           />

       <TextView
           android:id="@+id/paid_on_tv"
           android:layout_width="match_parent"
           android:layout_height="45dp"
           android:gravity="start|center"
           android:layout_gravity="center"
           android:layout_marginLeft="15dp"
           android:layout_marginRight="15dp"
           android:layout_marginTop="10dp"
           android:paddingStart="10dp"
           android:hint="dd-MM-yyyy"
           android:textColorHint="@color/line_color"
           android:background="@drawable/edt_bg"
           android:fontFamily="@font/libre_medium"
           android:textColor="@color/black"
           android:textSize="14sp"
           />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="start|center"
           android:layout_gravity="center"
           android:layout_marginLeft="5dp"
           android:layout_marginTop="15dp"
           android:fontFamily="@font/libre_medium"
           android:text="@string/financial_remarks_imp"
           android:textColor="@color/text_color_gray"
           android:textSize="16sp"
           />

       <EditText
           android:id="@+id/financial_remark_tv"
           android:layout_width="match_parent"
           android:layout_height="45dp"
           android:gravity="start|center"
           android:layout_gravity="center"
           android:layout_marginLeft="15dp"
           android:layout_marginRight="15dp"
           android:layout_marginTop="10dp"
           android:hint="@string/financial_remarks"
           android:paddingStart="10dp"
           android:inputType="numberDecimal"
           android:textColorHint="@color/line_color"
           android:background="@drawable/edt_bg"
           android:fontFamily="@font/libre_medium"
           android:textColor="@color/black"
           android:textSize="14sp"
           />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="start|center"
           android:layout_gravity="center"
           android:layout_marginLeft="5dp"
           android:layout_marginTop="15dp"
           android:fontFamily="@font/libre_medium"
           android:text="@string/status_imp"
           android:textColor="@color/text_color_gray"
           android:textSize="16sp"
           />

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="45dp"
           android:layout_marginTop="15dp"
           android:layout_marginLeft="15dp"
           android:layout_marginRight="15dp"
           android:background="@drawable/edt_bg">
           <ImageView
               android:layout_width="24sp"
               android:layout_height="24sp"
               android:layout_centerVertical="true"
               android:layout_marginRight="10dp"
               android:src="@drawable/baseline_keyboard_arrow_down_24"
               android:layout_alignParentRight="true"/>

           <Spinner
               android:id="@+id/spinnerStatus"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@android:color/transparent"
               android:layout_marginStart="5sp"/>
       </RelativeLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:gravity="center"
           android:layout_marginTop="30dp"
           android:layout_marginBottom="10dp">
           <Button
               android:id="@+id/save_btn"
               android:layout_width="120dp"
               android:layout_height="40dp"
               android:backgroundTint="@color/sky_blue_dark"
               android:background="@drawable/edt_bg_blue"
               android:fontFamily="@font/libre_semi_bold"
               android:text="@string/save"
               android:textAllCaps="false"
               android:layout_gravity="center"
               android:textColor="@color/white_text"
               android:textSize="14dp"
               />
           <Button
               android:id="@+id/delete_btn"
               android:layout_width="120dp"
               android:layout_height="40dp"
               android:backgroundTint="@color/red"
               android:background="@drawable/edt_bg_blue"
               android:fontFamily="@font/libre_semi_bold"
               android:text="@string/delete_txt"
               android:textAllCaps="false"
               android:layout_marginLeft="20dp"
               android:layout_gravity="center"
               android:textColor="@color/white_text"
               android:textSize="14dp"
               />
       </LinearLayout>
   </LinearLayout>
</ScrollView>