<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkDetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
        <RelativeLayout
            android:id="@+id/back_icon_layout"
            android:layout_width="40dp"
            android:layout_height="40dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:src="@color/white_text"
                android:layout_centerVertical="true"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerInParent="true"
                android:src="@drawable/baseline_arrow_back_24"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_work"
            android:fontFamily="@font/libre_semi_bold"
            android:textSize="20dp"
            android:singleLine="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/back_icon_layout"
            android:gravity="start|center"
            android:paddingHorizontal="16dp"
            android:textStyle="bold"
            android:textColor="@color/button_text"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:weightSum="3">
            <androidx.cardview.widget.CardView
                android:id="@+id/tab_one_card"
                android:layout_width="0dp"
                android:layout_height="6dp"
                app:cardCornerRadius="3dp"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                app:cardBackgroundColor="@color/orange"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/tab_two_card"
                android:layout_width="0dp"
                android:layout_height="6dp"
                app:cardCornerRadius="3dp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:cardBackgroundColor="@color/white_text"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/tab_three_card"
                android:layout_width="0dp"
                android:layout_height="6dp"
                app:cardCornerRadius="3dp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:cardBackgroundColor="@color/white_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:background="@drawable/edt_bg">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/basic_information"
                android:fontFamily="@font/libre_semi_bold"
                android:textSize="20dp"
                android:singleLine="true"
                android:gravity="start|center"
                android:paddingHorizontal="16dp"
                android:textStyle="bold"
                android:textColor="@color/button_text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_of_the_work"
                android:fontFamily="@font/libre_medium"
                android:textSize="12dp"
                android:singleLine="true"
                android:gravity="start|center"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="16dp"
                android:textStyle="bold"
                android:textColor="@color/text_ColorDark"/>

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>